# f2py_skel

./: .actrc  .coveragerc  .gitignore  LICENSE  pyproject.toml  pytest.ini  readme.org  setup.py
.github/workflows/: action.yml  commentpr.yml
exp/derived_types/f90/: fibby-f2pywrappers2.f90  fibbyhand.c  fibbymodule.c  gendiff.diff  meson.build  vecmod.f90
f2py/: __init__.py  __main__.py  __version__.py
f2py/codegen/: cfuncs.py  func2subr.py  rules.py
f2py/frontend/: __init__.py  crackfortran.py  f2py2e.py
f2py/stds/: auxfuncs.py
f2py/stds/f77/: common_rules.py
f2py/stds/f90/: f90mod_rules.py  use_rules.py
f2py/stds/pyf/: capi_maps.py  cb_rules.py
f2py/utils/: diagnose.py  npdist.py
f2py_skel/: __init__.py  __main__.py  __version__.py
f2py_skel/codegen/: cfuncs.py  func2subr.py  rules.py
f2py_skel/frontend/: __init__.py  crackfortran.py  f2py2e.py
f2py_skel/stds/: auxfuncs.py
f2py_skel/stds/f77/: common_rules.py
f2py_skel/stds/f90/: f90mod_rules.py  simple_derived_types.py  use_rules.py
f2py_skel/stds/pyf/: capi_maps.py  cb_rules.py
f2py_skel/utils/: deprecationhelpers.py  npdist.py
tests/: conftest.py  test_abstract_interface.py  test_array_from_pyobj.py  test_block_docstring.py  test_callback.py  test_cli.py  test_common.py  test_compile_function.py  test_crackfortran.py  test_kind.py  test_mixed.py  test_module_doc.py  test_quoted_character.py  test_regression.py  test_return_complex.py  test_return_integer.py  test_return_logical.py  test_return_real.py  test_string.py  test_symbolic.py  util.py
tests/cli/: pytest.ini  test_f2py2e.py
tests/src/cli/: hiworld.f90
tests/src/crackfortran/: foo.mod  isocbind.f90  isocbindonly.f90
tests/src/return_logical/: f90_return_logical.mod
