[tool.poetry]
name = "f2py_skel"
version = "0.0.1"
description = "A skeletal F2PY clone"
authors = ["Rohit Goswami <rog32@hi.is>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
