[tool.poetry]
name = "f2py_skel"
version = "0.0.1"
description = "A skeletal F2PY clone"
authors = ["Rohit Goswami <rog32@hi.is>"]
license = "MIT"
include = ["*.c", "*.h"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = { git = "https://github.com/numpy/numpy.git", rev = "0e10696f55576441fd820279d9ec10cd9f2a4c5d" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
f2py = "f2py_skel.frontend:main"
